--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
 
     // отвечает за иконки
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+    // отвечает за преференсы
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
