--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,22 @@
 buildscript {
     ext {
-        // самая оптимальная версия compose ui для использования (не требует padding в Scaffold)
-        compose_material_version = '1.1.1'
-        compose_ui_version = '1.1.1'
+        // самая оптимальная версия compose ui для использования (не требует padding в Scaffold и в то же время подходит под эту версию языка)
+        compose_material_version = '1.3.0'
+        // если увеличивается compose_material_version, то и compose_ui_version тоже увеличивается
+        compose_ui_version = '1.3.0'
         nav_version = "2.5.3"
         material3_version = '1.0.0-alpha15'
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // таким образом задаётся 1.7.0 java version, который в свою очередь подходит для firebase auth (ошибка "language version 1.8.0 expected")
+        classpath "com.android.tools.build:gradle:7.2.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
+        // таким образом подключаем google сервисы
+        classpath "com.google.gms:google-services:4.3.15"
     }
 }
 plugins {
