--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.0"
     androidTestImplementation "androidx.test.ext:junit:1.1.4"
+    implementation 'io.coil-kt:coil-compose:2.1.0'
+    implementation 'io.coil-kt:coil:2.1.0'
 
     // отвечает за цвет system bar
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.21.5-rc"
@@ -90,4 +93,7 @@ dependencies {
     // целый вечер мучался с этим "внедрением", в итоге оказалось, что нужно при помощи classpath изменить language version и подобрать под него compose version
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    // за даты и их преобразование
+    implementation 'org.threeten:threetenbp:1.4.0'
 }
