--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,18 @@
 buildscript {
-    ext {
-        // самая оптимальная версия compose ui для использования (не требует padding в Scaffold и в то же время подходит под эту версию языка)
-        compose_material_version = '1.3.0'
-        // если увеличивается compose_material_version, то и compose_ui_version тоже увеличивается
-        compose_ui_version = '1.3.0'
-        nav_version = "2.5.3"
-        material3_version = '1.0.0-alpha15'
-    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        // таким образом задаётся 1.7.0 java version, который в свою очередь подходит для firebase auth (ошибка "language version 1.8.0 expected")
-        classpath "com.android.tools.build:gradle:7.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
-        // таким образом подключаем google сервисы
-        classpath "com.google.gms:google-services:4.3.15"
+        classpath 'com.android.tools.build:gradle:8.8.2'
+        classpath "com.google.gms:google-services:4.4.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.1.21"
     }
 }
-plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
